@@ -1,3 +1,8 @@
+2006-02-21  Nobuo Yamashita  <nobsun@sampou.org>
+
+	* src/kahua-spvr.scm:
+	Modified signal mask seting and unseting around run-process.
+	
 2006-02-04  Nobuo Yamashita  <nobsun@sampou.org>
 
 	* src/kahua-spvr.scm:
